--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <p>Não pega o css do component</p>
+  <!-- <p>Não pega o css do component</p> -->
   <app-root></app-root>
 </body>
 </html>
